[tool.poetry]
name = "realtime"
version = "1.0.0"
description = ""
authors = ["bitnom"]

[tool.poetry.dependencies]
python = "^3.8"
# websockets = "^12.0"
python-dateutil = "^2.8.1"
typing-extensions = "^4.2.0"
aiohttp = {extras = ["speed"], version = "^3.8.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
