[tool.poetry]
name = "aiorealtime"
version = "0.1.13"
description = "Supabase Realtime client for asyncio, powered by AIOHTTP."
authors = ["bitnom"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
typing-extensions = "^4.2.0"
aiohttp = {extras = ["speed"], version = "^3.8.6"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.2.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "aiorealtime"
version = "0.1.13"
description = "Supabase Realtime client for asyncio, powered by AIOHTTP."
authors = [
    {name = "bitnom", email = "14287229+bitnom@users.noreply.github.com"},
    {name = "bitnom"},
]
dependencies = [
    "python-dateutil<3.0.0,>=2.8.1",
    "typing-extensions<5.0.0,>=4.2.0",
    "aiohttp[speed]<4.0.0,>=3.8.6",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}

